--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://ibmegranit.netlify.app/",
+  "homepage": "./",
   "name": "ibmegranite",
   "private": true,
   "version": "0.0.0",
