Update main entry point and scripts to use app.mjs

--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "granite",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.mjs",
   "scripts": {
-    "start": "node app.js",
-    "dev": "node app.js",
+    "start": "node app.mjs",
+    "dev": "node app.mjs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
